Added change password, confirm email APIs
