# backend/controllers/Authentication/signup.js
@@ -2,6 +2,7 @@ import connection from "../../util/mysql.js"
 import { v4 as uuidv4 } from "uuid"
 import { encryptPassword } from "../../util/passwords.js"
 import { CustomError } from "../../util/error.js"
+import sendEmail from "../../util/sendEmail.js"
 
 export default async (req, res, next) => {
   console.log(req.body)
@@ -11,10 +12,36 @@ export default async (req, res, next) => {
   try {
     if (!password) throw new CustomError(400, "Password not provided")
     const encryptedPassword = await encryptPassword(password)
-    const user = { userId, password: encryptedPassword, firstName, lastName, role, email, country, city, phone, gender, line, picture, profession }
+    const emailConfirmationCode = generateRandomCode()
+    const emailCodeExpire = new Date(new Date().setHours(new Date().getHours() + 1))
+    console.log(emailConfirmationCode, emailCodeExpire)
+
+    const user = {
+      userId,
+      password: encryptedPassword,
+      firstName,
+      lastName,
+      role,
+      email,
+      country,
+      city,
+      phone,
+      gender,
+      line,
+      picture,
+      profession,
+      emailConfirmationCode,
+      emailCodeExpire
+    }
     await connection.query("INSERT INTO user set ?", user)
+
+    await sendEmail(email, "Shoghly Email Verification", `Your verification code is: ${emailConfirmationCode}`)
     return res.status(201).json({ message: "User created", id: userId })
   } catch (err) {
     next(err)
   }
+}
+
+const generateRandomCode = () => {
+  return Math.floor(100000 + Math.random() * 900000)
 }
